example/src/snapshots/adze_example__optionals__tests__bare_separator.snap
---
source: src/optionals.rs
expression: "grammar::parse(\"_\")"
---
Ok(
    Language {
        v: None,
        _s: (),
        t: Spanned {
            value: None,
            span: (
                1,
                1,
            ),
        },
        _d: None,
    },
)
