example/src/snapshots/adze_example__optionals__tests__optional_grammar-2.snap
---
source: src/optionals.rs
assertion_line: 32
expression: "grammar::parse(\"_.\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                ".",
            ),
            start: 1,
            end: 1,
        },
    ],
)
