example/src/snapshots/adze_example__optionals__tests__optional_grammar-5.snap
---
source: src/optionals.rs
expression: "grammar::parse(\"1_2\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "_2",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "_2",
            ),
            start: 2,
            end: 2,
        },
    ],
)
