example/src/snapshots/adze_example__optionals__tests__optional_grammar-7.snap
---
source: src/optionals.rs
expression: "grammar::parse(\"_2\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "_2",
            ),
            start: 1,
            end: 1,
        },
    ],
)
