example/src/snapshots/adze_example__optionals__tests__optional_grammar.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"_\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "symbol 0",
            ),
            start: 1,
            end: 1,
        },
    ],
)
